DROP TABLE IF EXISTS owner_visits CASCADE;
DROP TABLE IF EXISTS owner_pets CASCADE;
DROP TABLE IF EXISTS owners CASCADE;
DROP TABLE IF EXISTS event_publication CASCADE;

CREATE TABLE owners (
                        id         INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
                        first_name VARCHAR(30),
                        last_name  VARCHAR_IGNORECASE(30),
                        address    VARCHAR(255),
                        city       VARCHAR(80),
                        telephone  VARCHAR(20)
);
CREATE INDEX owners_last_name ON owners (last_name);

CREATE TABLE owner_pets (
                            id         INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
                            name       VARCHAR(30),
                            birth_date DATE,
                            type_name  VARCHAR(20) NOT NULL,
                            owner_id   INTEGER
);
ALTER TABLE owner_pets ADD CONSTRAINT fk_owner_pets_owners FOREIGN KEY (owner_id) REFERENCES owners (id);
CREATE INDEX owner_pets_name ON owner_pets (name);


CREATE TABLE owner_visits (
                              id          INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
                              pet_id      INTEGER,
                              visit_date  DATE,
                              description VARCHAR(255)
);
ALTER TABLE owner_visits ADD CONSTRAINT fk_owner_visits_pets FOREIGN KEY (pet_id) REFERENCES owner_pets (id);
CREATE INDEX owner_visits_pet_id ON owner_visits (pet_id);

CREATE TABLE EVENT_PUBLICATION (
                                   id UUID PRIMARY KEY,
                                   completion_date TIMESTAMP,
                                   event_type VARCHAR(255),
                                   listener_id VARCHAR(255),
                                   publication_date TIMESTAMP,
                                   serialized_event BLOB
);